fix: fix z-index in footer

--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   min-height: 104px;
-  z-index: 100;
+  // z-index: 100;
 
   @include vp-767 {
     min-height: 206px;
@@ -98,4 +98,8 @@ span.footer__copyright {
     margin: 0;
     justify-self: flex-end;
   }
+}
+
+.footer .socials__link {
+  z-index: 1;
 }
